--- a/style/style.css
+++ b/style/style.css
@@ -192,6 +192,10 @@ body{
   cursor: pointer;
   transform: translateY(-5px);
 }
+.hero-button a{
+  color:var(--black) ;
+  text-decoration: none;
+}
 
 
 /* Custom Scroll Bar */
