--- a/style/style.css
+++ b/style/style.css
@@ -623,3 +623,110 @@ body{
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
 }
+/* footer */
+a :hover{
+  color:rgb(255,230,117);
+  transition: 450ms;
+  transform: scale(1.5);
+}
+
+.footer-dark {
+  padding:50px 0;
+  /* color:black; */
+  background-color:#7777776e;
+}
+
+.footer-dark h3 {
+  margin-top:0;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
+}
+
+.footer-dark ul {
+  padding:0;
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
+  
+}
+
+.footer-dark ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.6;
+  
+}
+
+.footer-dark ul a:hover {
+  opacity:0.8;
+  color: #e551f8;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item:not(.social) {
+    text-align:center;
+    padding-bottom:20px;
+  }
+}
+
+.footer-dark .item.text {
+  margin-bottom:36px;
+}
+
+@media (max-width:767px) {
+  .footer-dark .item.text {
+    margin-bottom:0;
+  }
+}
+
+.footer-dark .item.text p {
+  opacity:0.6;
+  margin-bottom:0;
+}
+
+.footer-dark .item.social {
+  text-align:center;
+}
+
+@media (max-width:991px) {
+  .footer-dark .item.social {
+    text-align:center;
+    margin-top:20px;
+  }
+}
+
+.footer-dark .item.social > a {
+  font-size:20px;
+  width:36px;
+  height:36px;
+  line-height:36px;
+  display:inline-block;
+  text-align:center;
+  background: #fc8c05;
+  /* size: 40px; */
+
+  border-radius:50%;
+  /* box-shadow:0 0 0 1px rgba(3, 3, 3, 0.4); */
+  margin:0 8px;
+  /* color:rgb(8, 8, 8); */
+  color:white;
+  opacity:0.75;
+}
+
+.footer-dark .item.social > a:hover {
+  opacity:0.9;
+  /* color:rgb(0, 0, 0); */
+}
+
+.footer-dark .copyright {
+  text-align:center;
+  padding-top:24px;
+ color: #272727c2;
+  /* opacity:0.3; */
+  font-family: 'Prompt', sans-serif;
+  font-weight: bold; 
+  font-size:23px;
+  margin-bottom:0;
+}
