--- a/style/style.css
+++ b/style/style.css
@@ -459,6 +459,23 @@ body{
   margin-right: 5px;
 }
 
+.navbar .contact-button{
+    background-color: #ffe675;
+    padding: .2em 1em;
+    border-radius: 10px;
+    color: #2f2f2f;
+    border-width: 0;
+    font-weight: 600;
+    font-size: 25px;
+    border-style: none;
+}
+
+.navbar .contact-button:hover{
+  text-decoration: none;
+  color: #2f2f2f;
+  padding: .2em 1em;
+
+}
 
 
 /* Hero Section Starts*/
@@ -598,6 +615,7 @@ body{
   font-weight: 500;
   font-size: 17px;
   line-height: 27px;
+  text-decoration: none;
   /* identical to box height, or 159% */
   border: none;
   color: var(--black);
@@ -606,10 +624,17 @@ body{
 .hero-button:hover{
   cursor: pointer;
   transform: translateY(-5px);
+
 }
 .hero-button a{
   color:var(--black) ;
   text-decoration: none;
+
+}
+.hero-button a:hover{
+  color:var(--black) ;
+  text-decoration: none;
+
 }
 
 
