--- a/style/style.css
+++ b/style/style.css
@@ -214,7 +214,7 @@ header{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.7rem 10%;
+  padding:5em 7em 3.5em 7em ;
   height: 6.5rem;
   background-color: rgba(2, 2, 2, 0);
   box-shadow: 0 1px 4px rgba(146,161,176,.3);
@@ -258,10 +258,10 @@ header .navbar ul{
   color: #fff;
 }
 header .navbar li{
-  margin-left: 2.5rem;
+  margin-left: 5rem;
 }
 header .navbar ul li a{
-  font-size: 1.57rem;
+  font-size: 1.2rem;
   color: #ffffff;
   font-weight: 600;
   text-decoration: none;
@@ -360,21 +360,32 @@ body{
 
 
 /* Navigation Starts */
-.navtrans{
-  margin-top: 1.5em;
+header{
+  
+  
+}
+.logoicon{
+  display: flex;
+  color: white;
+  
 }
 
+.logoicon h1{
+  margin-left: .5em;
+  font-family: "Druk Wide Bold";
+  font-size: 35px;
+  font-size: 2.2rem;
+}
 .logo img{ 
   left: 100px;
- 
-  height: 100px;
-  width: 100px;
   
-
+  height: 90px;
+  width: 90px;
+ 
 }
 
 
-.logo-text {
+/* .logo-text {
   position: absolute;
   width: 270px;
   height: 63px;
@@ -388,7 +399,7 @@ body{
   line-height: 32px;
   /* or 100% */
   color: var(--white);
-}
+} */
 .list-group {
   background: transparent;
   position: absolute;
@@ -463,19 +474,19 @@ body{
 
 .navbar .contact-button{
     background-color: #ffe675;
-    padding: .2em 1em;
-    border-radius: 10px;
+    padding: .5em 1.2em;
+    border-radius: 7px;
     color: #2f2f2f;
     border-width: 0;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 1.2rem;
     border-style: none;
 }
 
 .navbar .contact-button:hover{
   text-decoration: none;
   color: #2f2f2f;
-  padding: .2em 1em;
+  padding: .5em 1.2em;
 
 }
 
@@ -488,6 +499,7 @@ body{
   max-width: 100vw;
   background: var(--white) url("../media/Images/Background1.jpg") no-repeat;
   background-size: cover;
+  padding-bottom: 5rem;
 }
 .hero-left img {
   position: relative;
