--- a/style/style.css
+++ b/style/style.css
@@ -214,7 +214,7 @@ header{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding:5em 7em 3.5em 7em ;
+  padding: 1.7rem 10%;
   height: 6.5rem;
   background-color: rgba(2, 2, 2, 0);
   box-shadow: 0 1px 4px rgba(146,161,176,.3);
@@ -258,10 +258,10 @@ header .navbar ul{
   color: #fff;
 }
 header .navbar li{
-  margin-left: 5rem;
+  margin-left: 2.5rem;
 }
 header .navbar ul li a{
-  font-size: 1.2rem;
+  font-size: 1.57rem;
   color: #ffffff;
   font-weight: 600;
   text-decoration: none;
@@ -360,32 +360,21 @@ body{
 
 
 /* Navigation Starts */
-header{
-  
-  
-}
-.logoicon{
-  display: flex;
-  color: white;
-  
+.navtrans{
+  margin-top: 1.5em;
 }
 
-.logoicon h1{
-  margin-left: .5em;
-  font-family: "Druk Wide Bold";
-  font-size: 35px;
-  font-size: 2.2rem;
-}
 .logo img{ 
   left: 100px;
-  
-  height: 90px;
-  width: 90px;
  
+  height: 100px;
+  width: 100px;
+  
+
 }
 
 
-/* .logo-text {
+.logo-text {
   position: absolute;
   width: 270px;
   height: 63px;
@@ -399,7 +388,7 @@ header{
   line-height: 32px;
   /* or 100% */
   color: var(--white);
-} */
+}
 .list-group {
   background: transparent;
   position: absolute;
@@ -474,19 +463,19 @@ header{
 
 .navbar .contact-button{
     background-color: #ffe675;
-    padding: .5em 1.2em;
-    border-radius: 7px;
+    padding: .2em 1em;
+    border-radius: 10px;
     color: #2f2f2f;
     border-width: 0;
     font-weight: 600;
-    font-size: 1.2rem;
+    font-size: 25px;
     border-style: none;
 }
 
 .navbar .contact-button:hover{
   text-decoration: none;
   color: #2f2f2f;
-  padding: .5em 1.2em;
+  padding: .2em 1em;
 
 }
 
@@ -499,7 +488,6 @@ header{
   max-width: 100vw;
   background: var(--white) url("../media/Images/Background1.jpg") no-repeat;
   background-size: cover;
-  padding-bottom: 5rem;
 }
 .hero-left img {
   position: relative;
